# BS_final

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Commands  Doku P1  Dokumentation_Betriebssysteme.docx  README.md  echoAll  osmpRun  osmpRunnerlog
.cmake/: functions.cmake
.run/: TestAllRoot.run.xml  TestBarrier.run.xml  TestBarrierMulti.run.xml  TestGather.run.xml  TestGatherABC.run.xml  TestSendRank.run.xml  TestSendRec.run.xml  TestSendRecBlock.run.xml  TestSendRecBroadcast.run.xml  TestSendRecMulti.run.xml  TestSendRecRace.run.xml  echoAllBase.run.xml  echoAll_Test.run.xml  libosmp.run.xml  osmpRunner.run.xml  osmprun.run.xml  testISendIRecv.run.xml  testNonBlocking.run.xml  testSendIRecv.run.xml  testSendIRecvNonBlock.run.xml  test_N_M_ISendIRecv.run.xml
docs/: Doxyfile  generate_Documentation.sh
src/osmpExecutables/: echoAll.c  echoAll_base.c  testAllRoot.c  testBarrier.c  testBarrierMulti.c  testGather.c  testGatherABC.c  testISendIRecv.c  testNonBlocking.c  testSendIRecv.c  testSendIRecvNonBlock.c  testSendRank.c  testSendRec.c  testSendRecBlock.c  testSendRecBroadcast.c  testSendRecMulti.c  testSendRecRace.c  test_N_M_ISendIRecv.c
src/osmpLibrary/: OSMP.h  barrier.c  barrier.h  osmpLib.c  osmpLib.h
src/osmpRunner/: osmpRun.c  osmpRun.h
src/osmp_executables/: osmpExecutable_SendIRecv.c  osmpExecutable_SendRecv.c
src/osmp_library/: OSMP.h  osmplib.c  osmplib.h
src/osmp_runner/: osmp_run.c  osmp_run.h
test/: common.sh  runAllTests.sh  runAllTestsForOneExecutable.sh  runOneTest.sh  tests.json
